15 Aug 2011: Wouter
	- log with time in readable format (to logfile), detects strftime.
	- removed debug printouts.
	- menu is positioned neatly under the statusicon.
	- result window has icon set and a title.
	- fix unref for result_window by reffing it in the init function.
	- stop using deprecated glib function for tooltip.
	- lint fixes.
	- can handle NSEC DS denials if a zone is (temporarily) insecure,
	  detects that the denial is from the parent and contains NSEC.

12 Aug 2011: Wouter
	- persistant SSL connections to the server.

11 Aug 2011: Wouter
	- detection probes code.

10 Aug 2011: Wouter
	- working osx script, netconfig script and networkmanager script.

9 Aug 2011: Wouter
	- daemon code.

8 Aug 2011: Wouter
	- import of mismash of files from Unbound (BSD licensed).